k8s/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostNetwork: true
      containers:
      - name: pihole
        image: pihole/pihole:2024.05.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 53
            protocol: TCP
          - containerPort: 53
            protocol: UDP
          - containerPort: 67
            protocol: UDP
          - containerPort: 547
            protocol: UDP
          - name: http-port
            containerPort: 30234
            protocol: TCP
          - containerPort: 4711
            protocol: TCP
        volumeMounts:
          - mountPath: /etc/pihole
            subPath: ./data/pihole
            name: pihole-data
          - mountPath: /etc/dnsmasq.d
            subPath: ./data/dnsmasq.d
            name: pihole-data
        securityContext:
          privileged: true
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
          limits:
            memory: 1Gi
            cpu: 300m
      volumes:
        - name: pihole-data
          persistentVolumeClaim:
            claimName: pihole-pv-claim
